mm-c-k8s/mm-c-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-c-deployment
  namespace: mm-c
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mm-c
  template:
    metadata:
      labels:
        app: mm-c
    spec:
      containers:
      - name: mm-c-container
        image: trianglestream/mm-c:v1.03
        imagePullPolicy: Always
        volumeMounts:
        - name: origin-urls
          mountPath: /app/other
        ports:
        - containerPort: 5050
      volumes:
      - name: origin-urls
        configMap:
          name: origin-urls
          items:
            - key: origin_urls.json
              path: origin_urls.json
