mm-c-k8s/mm-c-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-c-svc
  namespace: mm-c
spec:
  selector:
    app: mm-c
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 6000
