mm-c-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mm-c
  namespace: mm-c

spec:
  rules:
    - host: mm-c.dev.trianglestream.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  mm-c-svc
                port:
                  number: 5000
